# reticulated

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
sim/: config.py  lxmf_agent.py  manager.py  medium_hub.py  node_manager.py  server.py  sim_interface_template.py  status.py  topology.py  traffic.py  wire.py
web/: app.js  index.html  style.css
